cmake_minimum_required(VERSION 3.0)
project( classify-features )
set(FULL_DOCS ON)
include_directories(/opt/local/include/eigen3)
find_package(Ceres REQUIRED PATHS /usr/local/lib/cmake/Ceres/ NO_DEFAULT_PATH)
unset(COLMAP_FIND_QUIETLY)
set(OpenMP_CXX_FLAGS -fopenmp)
find_package( COLMAP REQUIRED )
include_directories( ${COLMAP_INCLUDE_DIRS} )
link_directories( ${COLMAP_LINK_DIRS} )
add_executable( feature-data feature-data.cpp reconstruction.h reconstruction.cpp )
target_link_libraries( feature-data ${COLMAP_LIBRARIES} )
